--- a/app/views/organizations/index.html.erb
+++ b/app/views/organizations/index.html.erb
@@ -1,2 +1,6 @@
-<h1>Organizations#index</h1>
-<p>Find me in app/views/organizations/index.html.erb</p>
+<% @organizations.each do |organization| %>
+<h1><%= organization.title %></h1>
+  <% organization.activities.each do |activity| %>
+    <p><%= activity.title %></p>
+  <% end %>
+<% end %>
