--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -1,2 +1,3 @@
 This is the main page!
 <%= link_to "VK", user_omniauth_authorize_path(:vkontakte) %>
+<%= link_to "FB", user_omniauth_authorize_path(:facebook) %>
