--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,10 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  
+  <div class="hidden">
+    <%= render 'shared/email_form' %>
+  </div>
 
 <%= yield %>
 
