--- a/app/views/shared/_email_form.html.erb
+++ b/app/views/shared/_email_form.html.erb
@@ -1,4 +1,4 @@
-<div id="email_form">
+<div id="email_dialog">
 <%= form_for :user, :method => :put do |f| %>
   <%= f.label :email %>
   <%= f.text_field :email %>
