add users controllers with email_update action

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
 <body>
   
   <div class="hidden">
-    <%= render 'shared/email_form' %>
+    <%= render 'users/email_form', user: User.new %>
   </div>
 
 <%= yield %>
