--- a/app/views/users/_email_form.html.erb
+++ b/app/views/users/_email_form.html.erb
@@ -1,10 +1,9 @@
-<div id="email_dialog">
-<%= form_for user, method: :put, remote: true, url: update_user_email_path do |f| %>
+<%= form_for user, method: :put, remote: true, url: update_user_email_path,
+                   html: {id: :update_email_form} do |f| %>
   <%= f.label :email %>
   <%= f.text_field :email %>
   <% user.errors.each do |field, message| %>
-    <p><strong><%= field %></strong><%= message %></p>
+    <p><strong><%= field %>:</strong> <%= message %></p>
   <% end %>
   <%= f.submit %>
 <% end %>
-</div>
