add edit organization and activity in admin

--- a/app/assets/stylesheets/active_admin.css.scss
+++ b/app/assets/stylesheets/active_admin.css.scss
@@ -4,3 +4,13 @@
 
 // To customize the Active Admin interfaces, add your
 // styles here:
+
+div#edit_map{
+    width: 800px; 
+    height: 400px
+}
+
+.hidden{
+    visibility:hidden;
+    display:none;
+}
