--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -2,13 +2,16 @@
 sorting:
 <%= link_to "По названию",
             activities_path(sort: 'title'),
-            class: :activities_filter_link %>
+            class: :activities_filter_link,
+            "data-key" => :sort, "data-value" => :title %>
 <%= link_to "По пользовательскому рейтингу",
             activities_path(sort: 'users_rating'),
-            class: :activities_filter_link %>
+            class: :activities_filter_link,
+            "data-key" => :sort, "data-value" => :users_rating %>
 <%= link_to "По экспертной оценке",
             activities_path(sort: 'experts_rating'),
-            class: :activities_filter_link %>
+            class: :activities_filter_link,
+            "data-key" => :sort, "data-value" => :experts_rating %>
 <br />
 
 metro station:
@@ -20,13 +23,15 @@ metro station:
 <% @directions.each do |direction_tag| %>
   <%= link_to direction_tag.name,
               activities_path(direction_tag_id: direction_tag.id),
-              class: :activities_filter_link %>
+              class: :activities_filter_link,
+              "data-key" => :direction_tag_id, "data-value" => direction_tag.id %>
 <% end %><br />
 
 <% @age_tags.each do |age_tag| %>
   <%= link_to age_tag.title,
               activities_path(age_tag_ids: age_tag.id),
-              class: :activities_filter_link %>
+              class: :activities_filter_link,
+              "data-key" => :age_tag_ids, "data-value" => age_tag.id %>
 <% end %>
             
 <div id="activities_list">
