--- a/app/views/activities/_activities.html.erb
+++ b/app/views/activities/_activities.html.erb
@@ -1,4 +1,10 @@
 <% activities.each do |activity| %>
-  <h1><%= activity.title %></h1>
+  <h1><%= link_to activity.title, activity %></h1>
   <p><%= activity.description %></p>
+  <% activities.teachers.each do |teacher| %>
+    <br>
+    <%= image_tag teacher.photo.url %>
+    <%= teacher.name %>
+    <%= teacher.description %>
+  <% end %>
 <% end %>
