--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -9,3 +9,6 @@
   <%= teacher.name %>
   <%= teacher.description %>
 <% end %>
+
+<%=raw @activity.additional_information %>
+<%=raw @activity.parent_activities %>
