--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -2,3 +2,5 @@ This is the main page!
 <%= link_to "VK", user_omniauth_authorize_path(:vkontakte) %>
 <%= link_to "FB", user_omniauth_authorize_path(:facebook) %>
 <%= link_to "OD", user_omniauth_authorize_path(:odnoklassniki) %>
+
+<%= render partial: 'shared/search' %>
