--- a/app/views/admin/activities/_form.html.erb
+++ b/app/views/admin/activities/_form.html.erb
@@ -1,12 +1,17 @@
 <%= semantic_form_for [:admin, @activity], html: { multipart: true } do |f| %>
   <%= f.inputs 'Основное' do %>
-    <%= f.input :organization, as: :select, collection: Organization.all %>
+      <%= f.input :organization, as: :select, collection: Organization.all, include_blank: false %>
       <%= f.input :title %>
-      <%= f.input :address %>
-      <%= f.input :metro_station, as: :select, collection: MetroStation.all %>
       <%= f.input :description, input_html: { size: 10 } %>
       <%= f.input :users_rating %>
       <%= f.input :experts_rating %>
+    <% end %>
+
+    <%= f.inputs "Адрес" do %>
+      <%= f.input :metro_station, as: :select, collection: MetroStation.all %>
+      <%= f.input :address %>
+      <%= f.input :coords, as: :hidden, input_html: { class: 'hidden_coords'} %>
+      <%= f.input :coords, input_html: { class: 'edit_map' }, label: false %>
     <% end %>
 
     <%= f.inputs "Медиа контент" do %>
@@ -25,11 +30,6 @@
       </div>
       <%= link_to_add_association 'Добавить ссылку на видео', f, :videos,  'data-association-insertion-method' => 'append',
 	  'data-association-insertion-node' => '.activity_videos' %>
-    <% end %>
-
-    <%= f.inputs 'Карта' do %>
-      <%= f.input :coords, as: :hidden, input_html: { class: 'hidden_coords'} %>
-      <%= f.input :coords, input_html: { class: 'edit_map' }, label: false %>
     <% end %>
 
     <%= f.inputs 'Допонительная информация' do %>
