--- a/app/assets/stylesheets/active_admin.css.scss
+++ b/app/assets/stylesheets/active_admin.css.scss
@@ -4,6 +4,7 @@
 
 // To customize the Active Admin interfaces, add your
 // styles here:
+@import "jquery.timepicker";
 
 div#edit_map{
     width: 800px; 
