--- a/app/assets/stylesheets/active_admin.css.scss
+++ b/app/assets/stylesheets/active_admin.css.scss
@@ -4,7 +4,9 @@
 
 // To customize the Active Admin interfaces, add your
 // styles here:
-@import "jquery.timepicker";
+
+@import "jquery-ui/overcast";
+@import "jquery-ui-timepicker-addon";
 
 div#edit_map{
     width: 800px; 
