--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -6,3 +6,23 @@
 <% tag_cloud(@article_tags, %w(css1 css2 css3 css4)) do |tag, css_class| %>
   <%= link_to tag.name, { :action => :tag, :id => tag.name }, :class => css_class %>
 <% end %>
+
+<h5>Comments</h5>
+<% if @article_comments.any? %>
+  <% @article_comments.each do |comment| %>
+    <div class="article-comment">
+      <p>
+        <%= comment.content %> by
+        <%= comment.author %>
+        <button type="button" class="new-comment" id="<%= comment.id %>">Add reply!</button>
+        <% if comment.children.any? %>
+          <%= render "article_comments/article_comment", collection: comment.children %>
+        <% end %>
+      </p>
+    </div>
+  <% end %>
+<% end %>
+
+<button type="button" class="new-comment" id="0">Add reply!</button>
+
+<%= javascript_include_tag "articles.js" %>
