--- a/app/views/article_tags/show.html.erb
+++ b/app/views/article_tags/show.html.erb
@@ -5,6 +5,6 @@
      <%= time_ago_in_words article.created_at %> ago
   </p>
   <p>
-      <%= truncate(article.content, :length => 25, :omission => '...') %>
+      <%= truncate(article.content, length: 25, omission: '...') %>
   </p>
 <% end %>
