--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -4,7 +4,7 @@
 
 <h5>Article Tags</h5>
 <% tag_cloud(@article_tags, %w(css1 css2 css3 css4)) do |tag, css_class| %>
-  <%= link_to tag.name, { :action => :tag, :id => tag.name }, :class => css_class %>
+  <%= link_to tag.name, { action: :tag, id: tag.name }, class: css_class %>
 <% end %>
 
 <h5>Comments</h5>
