--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,5 +14,4 @@
 */
 
 .hidden { display: none; }
-.article-comment { margin-left: 50px; }
-.interview-comment { margin-left: 50px; }
+.comment { margin-left: 50px; }
