--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,8 @@
 </head>
 <body>
   
+  <%= flash[:notice] %>
+
   <div class="hidden">
     <div id="email_dialog">
       <%= render 'users/email_form', user: User.new %>
