--- a/app/views/specialists/show.html.erb
+++ b/app/views/specialists/show.html.erb
@@ -1,1 +1,17 @@
 <h2>Страница специалиста</h2>
+
+<%= @specialist.name %>
+<%= image_tag @specialist.avatar.url %>
+
+<% if can? :create, :question %>
+  <%= link_to 'Задать свой вопрос', '', id: 'create_question' %>
+  <div class="question_div"></div>
+  <div class="hidden">
+    <div class="question_form">
+      <%= form_for :question, url: create_question_specialist_path do |f| %>
+        <%= f.text_area :text %>
+        <%= f.submit 'Отправить' %>
+      <% end %>
+    </div>
+  </div>
+<% end %>
