add samples question and rake task db:setup_sample

--- a/app/views/experts/index.html.erb
+++ b/app/views/experts/index.html.erb
@@ -1,5 +1,7 @@
 <% @experts.each do |expert| %>
-  <p><%= link_to expert.name, expert %>
-  <br>
-  <%= expert.description.split('.').first %></p>
+  <p>
+    <%= link_to expert.name, expert %>
+    <br>
+    <%= expert.description.split('.').first %>
+  </p>
 <% end %>
