--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -23,7 +23,7 @@
 
 <h2>Children</h2>
 <% @activity.activity_comments.each do |comment| %>
-  <% if comment.isParent == false %>
+  <% if comment.is_parent == false %>
     <%= image_tag comment.picture.url(:thumb) %>
     <p>
       <%= comment.commentator %>
@@ -35,7 +35,7 @@
 
 <h2>Parents</h2>
 <% @activity.activity_comments.each do |comment| %>
-  <% if comment.isParent == true %>
+  <% if comment.is_parent == true %>
     <%= image_tag comment.picture.url(:thumb) %>
     <p>
       <%= comment.commentator %>
