--- a/app/views/contests/index.html.erb
+++ b/app/views/contests/index.html.erb
@@ -1,3 +1,8 @@
+<%= link_to "Все", contests_path %>
+<% ContestCategory.all.each do |category| %>
+ | <%= link_to category.name, contests_path(category: category.id) %>
+<% end %>
+
 <% @contests.each do |contest| %>
   <h1><%= contest.name %></h1>
   <strong>started at:</strong><%= contest.started_at %><br />
