--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,7 @@
 
   <div class="header">
     <%= render partial: 'shared/header' %>
+    <%= link_to 'Add to favourites', '#', id: 'favourite_link' %>
   </div>
 
   <%= yield %>
