--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,4 @@
 <%= @user.email %>
 <%= @user.name %>
 <%= link_to "edit profile", url_for("/profile/edit") %>
+<%= link_to "favourites", favourites_path %>
