--- a/app/views/contest_memberships/index.html.erb
+++ b/app/views/contest_memberships/index.html.erb
@@ -1,4 +1,5 @@
 <h1>Members:</h1>
 <% @memberships.each do |membership| %>
-  <%= membership.id %>
+  <%= link_to image_tag(membership.picture.url(:thumb)),
+              contest_membership_path(membership, contest_id: @contest.id) %>
 <% end %>
