--- a/app/views/contest_memberships/show.html.erb
+++ b/app/views/contest_memberships/show.html.erb
@@ -1,1 +1,5 @@
+<h1><%= link_to @contest.name, @contest %></h1>
+
+<h2><%= @membership.name %></h2>
 <%= image_tag(@membership.picture.url(:medium)) %>
+<p><%= @membership.description %></p>
