--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,3 +1,3 @@
 <% if can? :access, :specialist_dashboard  %>
-  <%= link_to 'Страница специалиста', specialist_root_path %>
+  <%= link_to 'Страница специалиста', specialist_user_root_path %>
 <% end %>
