--- a/app/views/specialist_user/questions/show.html.erb
+++ b/app/views/specialist_user/questions/show.html.erb
@@ -9,11 +9,11 @@
 </p>
 
 <% unless @question.publish %>
-  <%= form_for :question_comment, url: specialist_question_path(@question), method: :put do |f| %>
+  <%= form_for :comment, url: specialist_user_question_path(@question), method: :put do |f| %>
     <%= f.label :text, 'Ответ' %>
     <%= f.text_area :text %>
     <%= label_tag :question_category_id, 'Категория вопроса' %>
-    <%= select_tag :question_category_id, 
+    <%= select_tag :question_category_id,
 	options_from_collection_for_select(QuestionCategory.all, :id, :title) %>
     <%= f.submit 'Ответить' %>
   <% end %>
