show sign in dialog, if user tries to add work for contest

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,14 @@
   <%= flash_messages %>
 
   <div class="hidden">
-    <div id="email_dialog">
-      <%= render 'users/email_form', user: User.new if current_user and current_user.email.blank? %>
+    <% if current_user and current_user.email.blank?  %>
+      <div id="email_dialog">
+        <%= render 'users/email_form', user: User.new %>
+      </div>
+    <% end %>
+    
+    <div id="signin_dialog">
+      <%= render 'users/signin_dialog' %>
     </div>
   </div>
 
