--- a/app/views/contest_memberships/show.html.erb
+++ b/app/views/contest_memberships/show.html.erb
@@ -2,4 +2,10 @@
 
 <h2><%= @membership.name %></h2>
 <%= image_tag(@membership.picture.url(:medium)) %>
+<h2>Rate:</h2>
+
+<% (1..5).each do |n| %>
+  <li><%= link_to n, '#', class: "contest_rate#{n}_link signin_required" %></li>
+<% end %>
+
 <p><%= @membership.description %></p>
