--- a/app/views/interviews/index.html.erb
+++ b/app/views/interviews/index.html.erb
@@ -1,3 +1,3 @@
 <% @interviews.each do |interview| %>
-    <p><%= link_to interview.title, interview %></p>
+    <p><%= link_to interview.title, interview_path(interview) %></p>
 <% end %>
